@@ -1,7 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.10
 
-- Modified the plugin API to save messages to a temporary file.
+- Modified the plugin API to add a flags word and to save messages to a
+  temporary file.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
